--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,32 @@
-_site
+# Folder view configuration files
 .DS_Store
+Desktop.ini
+
+# Thumbnail cache files
+._*
+Thumbs.db
+
+# Files that might appear on external disks
+.Spotlight-V100
+.Trashes
+
+# Compiled Python files
+*.pyc
+
+# Application specific files
+venv
+node_modules
+bower_components
+.sass-cache
+tmp
+_site
+debug
+build
+assets
+Gemfile.lock
+env/*
+!env/sample.sh
+
+# IDE specific files
 .idea
+*.iml
