--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "matchdep": "~0.3.0",
     "grunt-browserify": "~1.2.12",
     "grunt-contrib-compass": "~0.7.0",
+    "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-cssmin": "~0.8.0",
     "grunt-contrib-uglify": "~0.3.2",
     "grunt-contrib-concat": "~0.3.0",
