--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "grunt-contrib-uglify": "~0.3.2",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-watch": "~0.5.3",
+    "grunt-contrib-connect": "~0.7.1",
+    "grunt-shell": "~0.6.1",
+    "grunt-contrib-csslint": "~0.2.0",
     "grunt-jekyll": "~0.4.1",
     "bower": "*",
     "grunt-exec": "*",
