Removed and deleted secret keys

--- a/_config.yml
+++ b/_config.yml
@@ -19,4 +19,5 @@ exclude: [
 
 destination: ./_site
 show_disqus: false
-url: http://localhost:4000/
+url: 'http://teambbailey.io'
+email: bailey1.brandon@gmail.com
